--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(rgb(255, 255, 0), rgb(89, 89, 255));
+  background: linear-gradient(rgb(235, 231, 8), rgb(64, 166, 122));
 }
 
 img {
@@ -12,6 +12,10 @@ img {
 h1 {
   text-align: center;
   text-shadow: 10;
+}
+
+h4 {
+  text-align: center;
 }
 
 p {
