--- a/style.css
+++ b/style.css
@@ -1,27 +1,115 @@
-body {
-  background: linear-gradient(rgb(235, 231, 8), rgb(64, 166, 122));
-}
 
-img {
-  border-radius: 100px;
-  margin: 50px auto 0 auto;
-  display: block;
-  cursor: pointer;
-}
+      body {
+        background: radial-gradient(
+          circle at 10% 20%,
+          rgb(255, 200, 124) 0%,
+          rgb(252, 251, 121) 90%
+        );
+      }
+      h1 {
+        text-align: center;
+        font-weight: 600;
+        background-color: rgb(222, 155, 21);
+        color: aliceblue;
+        border-radius: 20px;
+      }
+      h2 {
+        text-align: center;
+        background-color: black;
+        color: rgb(222, 155, 21);
+        border-radius: 20px;
+      }
+      h3 {
+        text-align: center;
+        background-color: rgb(222, 155, 21);
+        color: aliceblue;
+        font-size: larger;
+        border-radius: 20px;
+      }
+      h4 {
+        text-align: center;
+        background-color: black;
+        color: rgb(222, 155, 21);
+        font-size: larger;
+        border-radius: 20px;
+      }
+      ul {
+        list-style: none;
+        padding: 0;
+        text-align: center;
+        margin: 0 15px;
+      }
 
-h1 {
-  text-align: center;
-  text-shadow: 10;
-}
-
-h4 {
-  text-align: center;
-}
-
-p {
-  text-shadow: 10px;
-  font-size: 20px;
-}
-li {
-  font-size: larger;
-}
+      button {
+        font-size: 20px;
+        color: white;
+        display: block;
+        margin: 20px auto;
+        padding: 15px 20px;
+        background: #f1bd5d;
+        border-radius: 10px;
+        border: 1px solid #a54b0a;
+        border-radius: 30px;
+        box-shadow: 2px 5px 5px rgb(0 0 0 / 20%);
+        transition: all 200ms ease-in-out;
+      }
+      nav {
+        display: inline-block;
+        border: 1px solid brown;
+        padding: 15px;
+        display: flex;
+        justify-content: space-evenly;
+      }
+      img {
+        width: 600px;
+        display: block;
+        margin: 0 auto;
+        border-radius: 10px;
+        border: #a54b0a;
+        box-shadow: 2px 5px 5px rgb(0 0 0/ 30%);
+      }
+      button:hover {
+        background: white;
+        color: #a54b0a;
+        cursor: pointer;
+      }
+      .bees img {
+        width: 100px;
+        height: 100px;
+        position: relative;
+        animation-name: BEEBEE;
+        animation-duration: 9s;
+        animation-iteration-count: infinite;
+        direction: alternate-reverse;
+      }
+      @keyframes BEEBEE {
+        0% {
+          background-color: red;
+          left: 0px;
+          top: 0px;
+          transform: rotateZ(0deg);
+        }
+        25% {
+          background-color: yellow;
+          left: 200px;
+          top: 0px;
+          transform: rotateZ(90deg);
+        }
+        50% {
+          background-color: blue;
+          left: 200px;
+          top: 200px;
+          transform: rotateZ(90deg);
+        }
+        75% {
+          background-color: green;
+          left: 0px;
+          top: 200px;
+          transform: rotateZ(90deg);
+        }
+        100% {
+          background-color: red;
+          left: 0px;
+          top: 0px;
+          transform: rotateZ(0deg);
+        }
